--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -17,6 +17,16 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
+      - name: test
+        run: npm run test
+      - name: Run lint ts
+        run: npm run lint:ts
+      - name: Run lint css
+        run: npm run lint:css
+      - name: "print env variable"
+        run: echo "Hello $NAME"
+        env:
+          NAME: Sondre
       # Step 3 - Add tests and linting here
   deploy:
     needs: build
@@ -30,3 +40,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       # Step 2: Add deploy to Github pages here! Hot tip - The solution is in the Readme
+      - name: Build
+        run: npm run build
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: dist
